--- a/produit.html
+++ b/produit.html
@@ -9,38 +9,41 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Orinocam - accueil</title>
+    <title>Orinocam - produit</title>
 </head>
 
 <body>
     <header class="bg-first">
         <div class="container">
-            <nav class="row justify-content-between navbar navbar-expand-lg navbar-light">
-                <a class="col-8 navbar-brand" href="index.html"><img src="images/logoOrinoco.png" alt="logo orinoco"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div id="navbarContent" class="col-4 collapse navbar-collapse g-droite">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Panier.html">Panier &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
-                                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-                                </svg></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+                <nav class="row justify-content-between navbar navbar-expand-lg navbar-light">
+                    <a class="col-8 navbar-brand" href="index.html"><img src="images/logoOrinoco.png" alt="logo orinoco"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
+                        <span class="navbar-toggler-icon"></span>
+                     </button>
+                     <div id="navbarContent" class="col-4 collapse navbar-collapse g-droite">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Accueil</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Panier.html">Panier &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
+                                    <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                                  </svg></a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </div>
     </header>
 
-    <div class="container">
-        <h1 class="text-center mt-5 mb-5">Orinocam <br> Votre site de vente d'appreils photos vintage</h1>
-        <div id="emplacement" class="row">
-        </div>
+    <div class="col-9 mt-5 mb-5 mx-auto text-center">
+        <h1>Orinocam <br> Votre appareil photo vintage</h1>
+    </div>
+
+    <div id="productcontainer" class="row">
     </div>
 
     <div class = "bg-first mt-5 pt-3">
@@ -59,6 +62,6 @@
         </div>
     </div>
 
-<script src="js/products_list.js"></script>
+<script src="js/product_id.js"></script>
 </body>
 </html>
