ajout de commentaires

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <div class="container">
-        <h1 class="text-center mt-5 mb-5">Orinocam <br> Votre site de vente d'appreils photos vintage</h1>
+        <h1 class="text-center mt-5 mb-5">Orinocam <br> Votre site de vente d'appareils photos vintages</h1>
         <div id="emplacement" class="row">
         </div>
     </div>
