--- a/panier.html
+++ b/panier.html
@@ -51,6 +51,7 @@
     </div>
 
     <div class="container mt-5">
+        <h2 class="text-center mb-5">Merci de remplir le formulaire ci-dessous afin de valider votre commande</h2>
         <div class="row">
             <div class="col-6 mx-auto">
                 <form>
@@ -98,5 +99,6 @@
     </div>
 
 <script src="js/cart.js"></script>
+<script src="js/form.js"></script>
 </body>
 </html>
